--- a/UI/angular.json
+++ b/UI/angular.json
@@ -27,7 +27,7 @@
             ],
             "scripts": [
               
-              "../node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
 
             ]
           },
